// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isPrimary: false, isSecondary: false and isCascade: false 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
}

@media(max-width:759px) {
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    grid-column: 1/-1;
    padding: var(--p-spacing-fluid-sm);
    margin: 0 calc(var(--p-spacing-fluid-sm) * -1);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: none;
    }
}

@media(max-width:759px) {
    .drawer {
      display: none;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: false, isSecondary: false and isCascade: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot[name="button"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none !important;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      display: contents;
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      display: contents;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    display: none;
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: false, isSecondary: true and isCascade: false 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      grid-area: 2/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-desktop-secondary var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      grid-area: 4/2/auto/-2;
      z-index: 0;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-mobile var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
    slot[name="button"] {
      display: none;
    }
    slot[name="header"] {
      grid-area: 2/3;
      display: grid;
      place-items: center;
      z-index: 2;
    }
    h2 {
      font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: var(--p-spacing-static-md);
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: var(--_p-a);
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    grid-column: 1/-1;
    padding: var(--p-spacing-fluid-sm);
    margin: 0 calc(var(--p-spacing-fluid-sm) * -1);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: grid;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: var(--p-spacing-fluid-md) minmax(0, 1fr)/var(--p-spacing-fluid-lg) minmax(0, 1fr) var(--p-spacing-fluid-lg);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,var(--_p-b) 0%,var(--_p-b) 65%,transparent 100%);
    }
    .button {
      display: none;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: false, isSecondary: true and isCascade: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot[name="button"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none !important;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      grid-area: 2/2/auto/-2;
      display: contents;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-desktop-secondary var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      grid-area: 4/2/auto/-2;
      z-index: 0;
      display: contents;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-mobile var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
    slot[name="button"] {
      display: none;
    }
    slot[name="header"] {
      grid-area: 2/3;
      display: grid;
      place-items: center;
      z-index: 2;
    }
    h2 {
      font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: var(--p-spacing-static-md);
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: var(--_p-a);
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    display: none;
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: var(--p-spacing-fluid-md) minmax(0, 1fr)/var(--p-spacing-fluid-lg) minmax(0, 1fr) var(--p-spacing-fluid-lg);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,var(--_p-b) 0%,var(--_p-b) 65%,transparent 100%);
    }
    .button {
      display: none;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: true, isSecondary: false and isCascade: false 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot[name="button"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      grid-area: 3/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-desktop-primary var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      display: contents;
    }
    ::slotted(*:not([secondary])) {
      display: none !important;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      grid-area: 2/2;
      margin-bottom: var(--p-spacing-fluid-md);
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      grid-area: 2/2;
      margin-top: 2px;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: true, isSecondary: false and isCascade: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot[name="button"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none !important;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      grid-area: 3/2/auto/-2;
      display: contents;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-desktop-primary var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      display: contents;
    }
    ::slotted(*:not([secondary])) {
      display: none !important;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      grid-area: 2/2;
      margin-bottom: var(--p-spacing-fluid-md);
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      grid-area: 2/2;
      margin-top: 2px;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: true, isSecondary: true and isCascade: false 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot[name="button"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      grid-area: 2/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-desktop-primary var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      grid-area: 4/2/auto/-2;
      z-index: 0;
      display: contents;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-mobile var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
    slot[name="button"] {
      display: none;
    }
    slot[name="header"] {
      grid-area: 2/3;
      display: grid;
      place-items: center;
      z-index: 2;
    }
    h2 {
      font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: var(--p-spacing-static-md);
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: var(--_p-a);
    }
    ::slotted(*:not([secondary])) {
      display: none !important;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: var(--p-spacing-fluid-md) minmax(0, 1fr)/var(--p-spacing-fluid-lg) minmax(0, 1fr) var(--p-spacing-fluid-lg);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .back {
      grid-area: 2/2;
      margin-bottom: var(--p-spacing-fluid-md);
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,var(--_p-b) 0%,var(--_p-b) 65%,transparent 100%);
    }
    .button {
      display: none;
    }
    .back {
      grid-area: 2/2;
      margin-top: 2px;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isPrimary: true, isSecondary: true and isCascade: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,var(--p-spacing-fluid-md),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: var(--p-spacing-fluid-md);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  slot[name="header"] {
    display: none;
  }
  slot[name="button"] {
    display: none;
  }
  slot:not([name]) {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none !important;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: var(--p-spacing-fluid-xs);
  }
@media(min-width:760px) {
    slot:not([name]) {
      grid-area: 2/2/auto/-2;
      display: contents;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-desktop-primary var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
}

@media(max-width:759px) {
    slot:not([name]) {
      grid-area: 4/2/auto/-2;
      z-index: 0;
      display: contents;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,var(--p-spacing-fluid-xs));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: var(--p-spacing-fluid-lg);
      animation: slide-up-mobile var(--p-animation-duration, var(--p-duration-md)) var(--p-ease-in-out);
    }
    slot[name="button"] {
      display: none;
    }
    slot[name="header"] {
      grid-area: 2/3;
      display: grid;
      place-items: center;
      z-index: 2;
    }
    h2 {
      font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: var(--p-spacing-static-md);
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: var(--_p-a);
    }
    ::slotted(*:not([secondary])) {
      display: none !important;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: var(--p-spacing-fluid-md) minmax(0, 1fr)/var(--p-spacing-fluid-lg) minmax(0, 1fr) var(--p-spacing-fluid-lg);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .back {
      grid-area: 2/2;
      margin-bottom: var(--p-spacing-fluid-md);
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,var(--_p-b) 0%,var(--_p-b) 65%,transparent 100%);
    }
    .button {
      display: none;
    }
    .back {
      grid-area: 2/2;
      margin-top: 2px;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;
